# CodifyOne-OH

./: .gitattributes  .gitignore  .gitmodules  README.md  build-profile.json5.template  hvigorfile.ts
.github/workflows/: fastlane-ci.yml
AppScope/: app.json5
electron/: Gemfile  build-profile.json5  hvigorfile.ts  obfuscation-rules.txt  oh-package.json5
electron/.preview/config/: buildConfig.json
electron/fastlane/: Appfile  Fastfile  README.md
electron/hnp/arm64-v8a/: bash.hnp  electron.hnp  fastfetch.hnp  node.hnp  rg.hnp
electron/libs/arm64-v8a/: foreground_love.node  iselevated.node  kerberos.node  keymapping.node  keytar.node  libslirp.so.0  pty.node  spdlog.node  vscode-policy-watcher.node  vscode-sqlite3.node  watchdog.node  watcher.node
electron/src/main/: module.json5
electron/src/main/cpp/: CMakeLists.txt  host_command_bridge.cpp  host_command_bridge.h  qemu_runner.cpp  v8_isolate_hook.cpp  v8_pool_hook.cpp  wasmer_host.cpp  window_pool_host.cpp
electron/src/main/cpp/types/libentry/: index.d.ts  oh-package.json5
electron/src/ohosTest/: module.json5
scripts/: build-wasmer-ohos.sh  patch-app-asar-minimist.js  repack-hap-with-hnp.ps1
scripts/patches/: multiv-wasmer-ohos.patch
scripts/patches/graceful-fs/: index.js  package.json
scripts/patches/minimist/: index.js  package.json
scripts/patches/native-keymap/: index.js  package.json
scripts/patches/ohcode-splash/: extension.js  package.json
scripts/patches/vscode-sqlite3/: index.js  package.json
web_engine/: obfuscation-rules.txt  oh-package.json5
(+65 files in other folders)
